@@ -128,6 +128,10 @@ static void ExecuteCommand(
 			AddLogLineM(true,
 				CFormat(_("Failed to execute command `%s' on `%s' event.")) %
 				command % s_EventList[event].name);
+		} else {
+			// If wxExecute fails, we need to delete the CTerminationProcess
+			// otherwise it will leak.
+			delete p;
 		}
 	}
 }
